--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ant-design/nextjs-registry": "^1.3.0",
     "antd": "^6.0.0",
     "framer-motion": "^12.23.24",
-    "next": "16.0.5",
+    "next": "^16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sass": "^1.94.2"
