--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ant-design/icons": "^6.1.0",
-    "@ant-design/nextjs-registry": "^1.3.0",
-    "antd": "^6.0.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.556.0",
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
