--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.2",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.556.0",
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^15.0.0",
+    "react-hook-form": "^7.71.1",
+    "react-select": "^5.10.2",
     "sass": "^1.94.2"
   },
   "devDependencies": {
